--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,6 +8,7 @@ jobs:
       fail-fast: false
       matrix:
         erlang_version:
+        - "23"
         - "24"
     timeout-minutes: 120
     steps:
@@ -55,7 +56,7 @@ jobs:
     - name: RUN TESTS
       run: |
         bazelisk test //... \
-          --test_tag_filters=-exclusive,-aws \
+          --test_tag_filters=-exclusive,-aws,-mixed-version-cluster \
           --verbose_failures
   test-exclusive:
     name: Test (Exclusive Tests)
@@ -104,7 +105,64 @@ jobs:
     - name: RUN EXCLUSIVE TESTS
       run: |
         bazelisk test //... \
-          --test_tag_filters=exclusive,-aws \
+          --test_tag_filters=exclusive,-aws,-mixed-version-cluster \
           --build_tests_only \
           --test_env RABBITMQ_CT_HELPERS_DELETE_UNUSED_NODES=true \
+          --verbose_failures
+  test-mixed-version-cluster:
+    name: Test
+    runs-on: ubuntu-18.04
+    strategy:
+      fail-fast: false
+      matrix:
+        erlang_version:
+        - "23"
+        - "24"
+    timeout-minutes: 120
+    steps:
+    - name: CHECKOUT REPOSITORY
+      uses: actions/checkout@v2.3.4
+    - name: CONFIGURE BAZEL
+      run: |
+        echo "${{ secrets.BUILDBUDDY_CERT }}" > buildbuddy-cert.pem
+        echo "${{ secrets.BUILDBUDDY_KEY }}" > buildbuddy-key.pem
+        cat << EOF >> .bazelrc
+          build --remote_executor=grpcs://cloud.buildbuddy.io
+          build --host_platform=//:erlang_${{ matrix.erlang_version }}_platform
+          build --platforms=//:erlang_${{ matrix.erlang_version }}_platform
+          build --extra_execution_platforms=//:erlang_${{ matrix.erlang_version }}_platform
+
+          build --crosstool_top=@buildbuddy_toolchain//:toolchain
+          build --extra_toolchains=@buildbuddy_toolchain//:cc_toolchain
+          build --javabase=@buildbuddy_toolchain//:javabase_jdk8
+          build --host_javabase=@buildbuddy_toolchain//:javabase_jdk8
+          build --java_toolchain=@buildbuddy_toolchain//:toolchain_jdk8
+          build --host_java_toolchain=@buildbuddy_toolchain//:toolchain_jdk8
+
+          build --@bazel-erlang//:erlang_version=${{ matrix.erlang_version }}
+          build --@bazel-erlang//:erlang_home=/usr/lib/erlang
+          build --//:elixir_home=/usr/local
+
+          build --incompatible_strict_action_env
+
+          build --bes_results_url=https://app.buildbuddy.io/invocation/
+          build --bes_backend=grpcs://cloud.buildbuddy.io
+          build --remote_cache=grpcs://cloud.buildbuddy.io
+          build --tls_client_certificate=buildbuddy-cert.pem
+          build --tls_client_key=buildbuddy-key.pem
+          build --remote_timeout=1200
+
+          build --build_metadata=ROLE=CI
+          build --build_metadata=VISIBILITY=PUBLIC
+          build --remote_instance_name=buildbuddy-io/buildbuddy/ci
+          build --spawn_strategy=remote
+          build --jobs=50
+          build --grpc_keepalive_time=30s
+        EOF
+    #! - name: Setup tmate session
+    #!   uses: mxschmitt/action-tmate@v3
+    - name: RUN TESTS
+      run: |
+        bazelisk test //... \
+          --test_tag_filters=mixed-version-cluster,-exclusive,-aws \
           --verbose_failures
